--- a/app/src/main/res/layout/activity_frameanimation.xml
+++ b/app/src/main/res/layout/activity_frameanimation.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<TextView
-    android:text="动画"
-    android:textColor="@color/colorAccent"
+    android:layout_height="match_parent"
+    android:background="#00ffff">
+<android.support.v7.widget.AppCompatImageView
+android:id="@+id/img"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:src="@drawable/frame_animation"
+   />
+    <!--android:background="@drawable/frame_animation"-->
 </android.support.constraint.ConstraintLayout>
