--- a/app/src/main/res/layout/activity_text_save.xml
+++ b/app/src/main/res/layout/activity_text_save.xml
@@ -15,6 +15,7 @@
         android:hint="这里显示读取的结果" />
 
     <android.support.design.widget.TextInputLayout
+        android:layout_marginTop="50dp"
         android:id="@+id/layout_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
